fix deployment error

--- a/LANDMARKS/landmarks.html
+++ b/LANDMARKS/landmarks.html
@@ -186,7 +186,7 @@
         }
 
         function goHome() {
-            window.location.href = '../../day.html';
+            window.location.href = '../../index.html';
         }
         function showPreloader() {
             var preloadContainer = document.getElementById('preloadContainer');
