--- a/3bhk/3bhk 17th floor/3bhk 17th floor.html
+++ b/3bhk/3bhk 17th floor/3bhk 17th floor.html
@@ -236,7 +236,7 @@
         }
 
         function goHome() {
-            window.location.href = '../../day.html';
+            window.location.href = '../../index.html';
         }
 
         function showPreloader() {
