--- a/3bhk/3bhk 28th floor/3bhk 28th floor.html
+++ b/3bhk/3bhk 28th floor/3bhk 28th floor.html
@@ -244,7 +244,7 @@
         }
 
         function goHome() {
-            window.location.href = '../../day.html';
+            window.location.href = '../../index.html';
         }
 
         function showPreloader()
