--- a/4bhk/4bhk 23rd floor/4bhk 23rd floor.html
+++ b/4bhk/4bhk 23rd floor/4bhk 23rd floor.html
@@ -230,7 +230,7 @@
         }
 
         function goHome() {
-            window.location.href = '../../day.html';
+            window.location.href = '../../index.html';
         }
 
         function showPreloader() {
