--- a/index.html
+++ b/index.html
@@ -826,13 +826,13 @@
     </div>
 
     <div id="controls">
-        <button onclick="window.location.href='/day.html'"><i class="fa-solid fa-house"></i></button>
+        <button onclick="window.location.href='/index.html'"><i class="fa-solid fa-house"></i></button>
         <button onclick="toggleFullscreen()"><i class="fa-solid fa-expand"></i></button>
         <button onclick="toggleAudio()" class="audio-btn"><i class="fa-solid fa-volume-xmark"></i></button>
     </div>
 
     <div id="timeControls">
-        <button onclick="window.location.href='day.html'"><i class="fa-solid fa-sun"></i> Day</button>
+        <button onclick="window.location.href='index.html'"><i class="fa-solid fa-sun"></i> Day</button>
         <button onclick="window.location.href='evening/evening.html'"><i class="fa-solid fa-cloud-sun"></i> Evening</button>
         <button onclick="window.location.href='night/night.html'"><i class="fa-solid fa-moon"></i> Night</button>
     </div>
