--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
     </div>
 
     <script>
+
+        let a = 1;
         // Audio toggle
         function toggleAudio() {
             const audio = document.getElementById("background-audio");
