--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         .utility-buttons {
             position: fixed;
             /* instead of absolute */
-            top: 10px;
+            bottom: 10px;
             /* distance from bottom */
             right: 10px;
             /* distance from right */
