--- a/gym/gym.html
+++ b/gym/gym.html
@@ -478,7 +478,7 @@ loadTour()
     <div id="viewer"></div>
 
     <audio id="background-audio" loop muted>
-        <source src="./assets/audio/audio.mp3" type="audio/mpeg">
+        <source src="/assets/audio/audio.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
