--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -495,7 +495,7 @@
     <div id="viewer"></div>
 
     <audio id="background-audio" loop muted>
-        <source src="./assets/audio/audio.mp3" type="audio/mpeg">
+        <source src="/assets/audio/audio.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
