--- a/LANDMARKS/landmarks.html
+++ b/LANDMARKS/landmarks.html
@@ -8,7 +8,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
   <link rel="manifest" href="/assets/site.webmanifest">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="user-scalable=no, initial-scale=0.5, width=device-width, viewport-fit=cover" />
+  <meta name="viewport"
+    content="user-scalable=no, initial-scale=1.0, width=device-width, viewport-fit=cover, maximum-scale=1.0" />
   <link rel="preload" href="script.js?v=1755593357653" as="script" />
   <link rel="preload" href="media/panorama_BF51CE98_B406_070A_41E3_23A4B2087BB8_0/l/4/0_0.jpg?v=1755593357653"
     as="image" />
@@ -345,6 +346,20 @@
     function isOVRWeb() {
       return window.location.hash.substring(1).split('&').indexOf('ovrweb') > -1;
     }
+
+    // Orientation check
+    function checkOrientation() {
+      const overlay = document.getElementById("rotateOverlay");
+      if (window.innerHeight > window.innerWidth && /Mobi|Android/i.test(navigator.userAgent)) {
+        overlay.style.display = "flex";
+      } else {
+        overlay.style.display = "none";
+      }
+    }
+
+    window.addEventListener("resize", checkOrientation);
+    window.addEventListener("orientationchange", checkOrientation);
+    window.addEventListener("load", checkOrientation);
   </script>
   <style type="text/css">
     :root {
@@ -539,11 +554,57 @@
         margin-right: 0;
       }
     }
+
+    /* Rotate Overlay */
+    #rotateOverlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.95);
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      font-family: 'Segoe UI', sans-serif;
+      font-size: 1.5rem;
+      z-index: 999999;
+      text-align: center;
+      padding: 20px;
+      display: none;
+    }
+
+    #rotateOverlay i {
+      font-size: 3rem;
+      margin-bottom: 15px;
+      animation: rotatePhone 2s infinite ease-in-out;
+    }
+
+    @keyframes rotatePhone {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      50% {
+        transform: rotate(90deg);
+      }
+
+      100% {
+        transform: rotate(0deg);
+      }
+    }
   </style>
 
 </head>
 
 <body onload="onLoad()">
+  <!-- Orientation overlay -->
+  <div id="rotateOverlay">
+    <i class="fa-solid fa-mobile-screen-button"></i>
+    <p>Please rotate your device<br>for the best experience</p>
+  </div>
   <audio id="background-audio" loop muted>
     <source src="../assets/audio/audio.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
