--- a/4bhk/4bhk.html
+++ b/4bhk/4bhk.html
@@ -749,10 +749,10 @@
             z-index: 1000;
             display: flex;
             gap: 8px;
-            background: rgba(255, 255, 255, 0.9);
+            /* background: rgba(255, 255, 255, 0.9); */
             padding: 8px 12px;
             border-radius: 16px;
-            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
+            /* box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15); */
         }
 
         #roomNav button {
