--- a/lobby/lobby.html
+++ b/lobby/lobby.html
@@ -411,10 +411,10 @@
             display: flex;
             gap: 12px;
             z-index: 99999;
-            background: rgba(255, 255, 255, 0.95);
+            /* background: rgba(255, 255, 255, 0.95); */
             padding: 10px 14px;
             border-radius: 36px;
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.18);
+            /* box-shadow: 0 8px 24px rgba(0, 0, 0, 0.18); */
             align-items: center;
             /* allow horizontal scroll on very small screens */
             max-width: calc(100% - 40px);
