Updated Floor plan button icon

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         </button>
 
         <button class="floor-plans-btn" onclick="openModal()">
-            <i class="fa-solid fa-ruler-combined"></i>
+            <i class="fa-solid fa-map-location-dot"></i>
         </button>
 
         <div class="button-group">
