Updated 4bhk & projects

--- a/3bhk/3bhk.html
+++ b/3bhk/3bhk.html
@@ -704,7 +704,7 @@
         // 🚀 FALLBACK: If no exact match, use the keyword-based heuristic.
         console.log('No exact scene label match found. Falling back to keyword search.');
 
-        if (s.includes('bolcony')) return 'balcony';
+        if (s.includes('balcony')) return 'balcony';
         if (s.includes('bedroom_01_toilet')) return 'bedroom1_toilet';
         if (s.includes('bed02_toilet')) return 'bedroom2_toilet';
         if (s.includes('bdroom03_toilet')) return 'bedroom3_toilet';
