Updated balcony scene

--- a/3bhk/3bhk.html
+++ b/3bhk/3bhk.html
@@ -1373,7 +1373,7 @@
 
     <div id="roomNav"></div>
 
-    <div id="currentRoomInfo"></div>
+    <!-- <div id="currentRoomInfo"></div> -->
 </body>
 
 </html>
