--- a/4bhk/4bhk.html
+++ b/4bhk/4bhk.html
@@ -905,7 +905,7 @@
 
     <div id="roomNav"></div>
 
-    <div id="currentRoomInfo"></div>
+    <!-- <div id="currentRoomInfo"></div> -->
 </body>
 
 </html>
