Updated background for floor buttons

--- a/4bhk/4bhk.html
+++ b/4bhk/4bhk.html
@@ -711,6 +711,7 @@
             flex-direction: column;
             gap: 12px;
             font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+            background-color: transparent;
         }
 
         #floorNav button {
