--- a/3bhk/3bhk.html
+++ b/3bhk/3bhk.html
@@ -73,6 +73,7 @@
             flex-direction: column;
             gap: 12px;
             font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+            background-color: transparent;
         }
 
         #floorNav button {
